# GNOMEs

./: CMakeLists.txt  README.md
exe/: gnomes-run.cpp  gnomes-template.cpp
inc/configs/elf/: function-adder.h  injector.h  patcher.h  renamer.h
inc/elf/: base.hpp  editor.hpp  format.hpp  function-adder.h  injector.h  patcher.h  renamer.h
inc/gnomes/: apis.h  editor.h  logger.h  schemas.h
inc/utils/: colors.h
lib/configs/elf/: function-adder.cpp  injector.cpp  patcher.cpp  renamer.cpp
lib/elf/: base.cpp  editor.cpp  format.cpp  function-adder.cpp  injector.cpp  patcher.cpp  renamer.cpp
lib/gnomes/: api.c
lib/loggers/: print_only.cpp
lib/schemas/: json.cpp
schemas/elf/: function_adder_config.schema.json  injector_config.schema.json  patcher_config.schema.json  renamer_config.schema.json
tools/: generate_gnome_schemas.cpp  generate_gnomes.cpp
